crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__user_cell_multiline.snap
---
source: crates/braze-tui/src/history_cell.rs
expression: "render_to_buffer(&cell, 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 2 },
    content: [
        "> primera linea                         ",
        "  segunda linea mas larga que la primera",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
